v2.7.3   - Made LUT pixel and color area lookups a tad faster.
	 - Added an option in the pixel bar's RGBA toolbar to switch to
	   display pixels as:
	   * Full (show pixel values with gamma, gain and lut applied),
	   * Gamma (show pixel values with gamma and gain only)
	   * Original (show pixel values unchanged by gain, gamma or lut)
	 - Made color area window, histogram and vectorscope react 
	   automatically to changes in gamma, gain or lut.

v2.7.2   - Bug fixed a warning in running CTL with ICC preferred.
	 - Added ACES utilities to distribution: ctlrender, exr_dpx_exr and
	   exrdpx.
	 - Made color picker with LUT work in real time.
	 - Removed the preference switch to show colors in pixel toolbar.
	 - Added showing color of LUT in Color Area Information Window.
	 - Bug fixed a startup bug when setlocale failed.

v2.7.1   - With NSIS exe installer, made Windows' icons show the version 
	   number.
	 - Bug fixed CTL Look Modulation Transform Picker.
	 - Bug fixed libACESclip to use linkTransform instead of name
	   when available. Made reader/writer use TransformID instead of name.
	 - Bug fixed RPM installer not creating ln -s /usr/bin/mrViewer
	   correctly.
	 - Color picker now can show colors with the LUT applied.  This 
	   makes the gui (zoom) respond a tad slower when the LUT is on.
	   As such a preferences option was added.
	 - Added switch in Preferences to show pixel color values after LUT.
	 - Made DEB/RPM installer on Linux place an icon in desktop in
	   any language locale.
	 - DEB/RPM will register file associations (mime-types) to all of
	   mrViewer's recognized files.
	 - Added translation to Spanish when that's the locale default.
	 - Updated libACESclip to new format according to Jim Houston.

v2.7.0   - Added ACEScsc files as IDTs to support DigitalLAD sample picture.
	 - Made xml and ctl files never show as sequences of frames in
	   file requester.
	 - On Linux, now mrViewer is added to the system path thru a symlink.