@@ -12,7 +12,7 @@ export FFMPEG_ROOT=F:/code/lib/ffmpeg-20141004-git-1c4c78e-win32-shared
 
 export  GLUT_ROOT_PATH="F:/code/lib/glut/"
 export   FLTK2_DIR="F:/code/lib/fltk-2.0-win32"
-export MAGICK_HOME="F:/code/lib/ImageMagick-6.7.4"
+export MAGICK_HOME="F:/code/lib/ImageMagick-6.8.9-win32"
 export GLEW_ROOT="F:/code/lib/glew-1.11.0"
 export POSTGRESQL_ROOT="C:/Program Files (x86)/PostgreSQL/9.1"
 export TCLAP_ROOT="F:/code/lib/tclap-1.2.0"
